syntax = "proto3";

option go_package = "../message";

// protoc -I./ --go_out=./ ./*.proto

enum MessageID {
  MsgNone = 0;
  MsgAppendEntriesReq   = 1;
  MsgAppendEntriesRes   = 2;
  MsgRequestPreVoteReq  = 3;
  MsgRequestPreVoteRes  = 4;
  MsgRequestVoteReq     = 5;
  MsgRequestVoteRes     = 6;
}

message Entry {
  uint64 Term = 1;
  uint64 Index = 2;
  int32 EntryType = 3;
  bytes Data = 4;
}

message StorageState {
  uint64 Term = 1;
  uint64 LastAppliedIndex = 3;
}

message Snapshot {
  uint64 Index = 1;
  uint64 Term = 2;
  bytes Data = 3;
}

message StorageConfig {
  repeated int64 Peers = 1;
}


message AppendEntriesReq {
  repeated Entry Entries = 5;     // 存储的日志条目
}
message AppendEntriesRes {
  uint64 NeedAppendIndex = 4;     //
  uint64 RejectedIndex = 5;       // 拒绝的冲突索引，
}

message RequestVoteReq {
}
message RequestVoteRes {
}

message Message {
  MessageID MsgID = 1;
  uint64 Term = 2;
  int64 From = 3;
  int64 To = 4;
  uint64 LastLogTerm = 5;
  uint64 LastLogIndex = 6;
  bool Reject = 7;

  AppendEntriesReq AppendEntriesReq = 10;
  AppendEntriesRes AppendEntriesRes = 11;

  RequestVoteReq RequestVoteReq = 12;
  RequestVoteRes RequestVoteRes = 13;
}
